# MiataEngine

./: CMakeLists.txt  LICENSE.md  README.md  format.sh
engine/: Beam.hpp  CMakeLists.txt  CmdArgs.cpp  CmdArgs.hpp  CmdBuffer.cpp  CmdBuffer.hpp  CmdExecutor.cpp  CmdExecutor.hpp  CmdList.cpp  CmdList.hpp  Console.hpp  CvarController.cpp  CvarController.hpp  CvarDispatcher.cpp  CvarDispatcher.hpp  CvarList.cpp  CvarList.hpp  CvarManager.cpp  CvarManager.hpp  Edict.cpp  Edict.hpp  EdictPool.cpp  EdictPool.hpp  EngineInterface.cpp  EngineInterface.hpp  FileSystem.cpp  FileSystem.hpp  Host.cpp  Host.hpp  ICDAudio.hpp  Logger.cpp  Logger.hpp  ModuleExports.cpp  ModuleLoader.cpp  ModuleLoader.hpp  Server.cpp  Server.hpp  ServerWorld.hpp  SizeBuffer.cpp  SizeBuffer.hpp  (+38 more)
engine/platform/linux/: gl_vidlinux.cpp  gl_vidlinuxglx.cpp  sys_linux.cpp
engine/platform/null/: vid_null.cpp
engine/platform/win/: snd_win.cpp  sys_win.cpp  sys_wind.cpp
src/: CMakeLists.txt
src/clgame/: CMakeLists.txt  ClientGame.cpp  ClientGame.hpp  ClientGameInterface.cpp  Menu.cpp  ModuleExports.cpp  StatusBar.cpp  StatusBar.hpp  cl_input.cpp  cl_input.hpp
src/clgame/q2/: cl_input.cpp  cl_inv.cpp  cl_parse.cpp
src/clgame/qw/: cl_parse.cpp  sbar.c
src/clgame/unused/: chase.cpp  view.hpp
src/common/: IEngine.hpp  IEntity.hpp  ISystem.hpp  ModuleLoader.hpp  commontypes.hpp  cvardef.h  game.h  kbutton.h  protocol.hpp  ref.h  shared_lib.hpp  usercmd.h
src/common/cdaudio/: ICDAudio.hpp
src/common/clgame/: IClientGame.h  IClientGame.hpp
src/common/engine/: ICmdArgs.hpp  ICmdList.hpp  ICvarController.hpp  ICvarList.hpp  IEngine.h  IEngine.hpp  IEngineClient.hpp  IEngineServer.hpp  IFileSystem.hpp  IGameClient.hpp  ILocalClient.hpp  IWorld.hpp  engine_api.h
src/common/game/: IGame.h  IGame.hpp  gamedef.hpp
src/common/input/: IInput.hpp
src/common/mathlib/: mathlib.h
src/common/menu/: IMenu.hpp
src/common/network/: INetwork.hpp
src/common/physics/: IPhysics.hpp  IPhysicsBody.hpp
src/common/qstdlib/: string.h
src/common/sound/: ISound.hpp
src/common/video/: IVideo.hpp
src/ctf/: CMakeLists.txt  g_ctf.cpp  g_ctf.h  g_items.cpp  g_misc.cpp  g_utils.cpp  p_menu.cpp  p_weapon.cpp  q_shared.h
src/dedicated/: CMakeLists.txt  main.cpp
src/dedicated/unused/: main_win.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Exports.cpp  bspfile.h  buildnum.c  buildnum.cpp  cdaudio.h  cl_demo.c  cl_demo.cpp  cl_input.c  cl_input.cpp  cl_main.c  cl_main.cpp  cl_parse.c  cl_parse.cpp  cl_pred.cpp  cl_tent.cpp  client.h  cmd.c  cmd.cpp  cmd.h  cmodel.h  common.c  common.cpp  common.h  console.c  console.cpp  console.h  crc.h  cvar.cpp  cvar.h  d_iface.h  draw.h  gl_model.h  glquake.h  glquake2.h  host.c  host.cpp  host.h  host_cmd.c  (+49 more)
src/engine/fixme/: gameprogs.cpp
src/engine/linux/: in_linux.cpp  in_linux.h  net_udp.cpp  sys_linux.c  sys_linux.cpp  vid_linux.cpp
src/engine/macos/: sys_rhap.m
src/engine/macosx/: sys_rhap.m
src/engine/null/: sys_null.c  sys_null.cpp  vid_null.cpp
src/engine/r_gl/: gl_draw.c  gl_rmain.c  gl_rsurf.c  gl_screen.c
src/engine/r_soft/: d_edge.c  draw.c  r_misc.c
src/engine/solaris/: sys_solaris.c
src/engine/sound/: CMakeLists.txt  snd_dma.cpp  snd_mem.cpp  snd_mix.cpp
src/engine/win/: in_win.c  net_wins.cpp  snd_win.cpp  sys_win.c  sys_win.cpp  sys_wind.cpp  vid_win.cpp
src/game/: CMakeLists.txt  g_items.cpp  g_spawn.cpp  q_shared.h
src/game/blank/: CMakeLists.txt  Game.cpp  Game.hpp  ModuleExports.cpp
src/game/ctf/: CMakeLists.txt  g_cmds.cpp  g_combat.c  g_ctf.c  g_ctf.cpp  g_ctf.h  g_items.c  g_items.cpp  g_local.h  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_monster.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_svcmds.c  g_target.cpp  g_trigger.c  g_utils.cpp  g_weapon.c  p_client.cpp  p_hud.c  p_hud.cpp  p_menu.c  p_menu.h  p_view.cpp  q_shared.c  q_shared.cpp  q_shared.h
src/game/default/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_items.c  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_utils.c  g_weapon.c  m_actor.c  m_berserk.c  m_boss2.c  m_boss31.c  m_boss32.c  m_brain.c  m_flipper.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_medic.c  m_move.c  m_soldier.c  m_tank.c  p_view.c  p_weapon.c  q_shared.c
src/game/q1clutch/: CMakeLists.txt  Game.cpp  GameInterface.cpp  sv_phys.cpp
src/game/q2/: CMakeLists.txt  g_ai.cpp  g_cmds.cpp  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_save.cpp  g_spawn.cpp  g_svcmds.cpp  g_target.cpp  g_utils.cpp  m_actor.cpp  p_client.cpp  p_hud.cpp  p_view.cpp  q_shared.cpp  q_shared.h
src/launcher/: CMakeLists.txt  main.cpp
src/launcher/unused/: main_linux_qw.cpp  main_unix.cpp  main_win.cpp
src/launcher/win/: resource.hpp
src/mathlib/: CMakeLists.txt
src/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
src/menu/unused/: Menu_Save.hpp  Menu_SinglePlayer.hpp  menu.cpp
src/miata/: CMakeLists.txt
src/miata/cdaudio/: CMakeLists.txt
src/miata/engine/: CMakeLists.txt  Cmd.hpp  CmdArgs.cpp  CmdArgs.hpp  CmdBuffer.hpp  CmdExecutor.cpp  CmdExecutor.hpp  CmdList.hpp  Common.cpp  Console.cpp  Console.hpp  Cvar.hpp  CvarController.cpp  (+27 more)
src/newframe/: CDAudio.cpp  CDAudio.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  Client.cpp  Client.hpp  ClientSlot.cpp  ClientSlot.hpp  Cmd.cpp  Cmd.hpp  CmdBuffer.cpp  CmdBuffer.hpp  Console.cpp  Console.hpp  Cvar.cpp  Cvar.hpp  Draw.cpp  Draw.hpp  Edict.hpp  Engine.cpp  Engine.hpp  Exports.cpp  Host.cpp  Host.hpp  Hunk.cpp  Hunk.hpp  Info.cpp  Info.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  Memory.cpp  Memory.hpp  Menu.cpp  Menu.hpp  Model.cpp  Model.hpp  ModelCache.cpp  (+25 more)
src/q1clutch/: Game.hpp
src/q2clutch/: CMakeLists.txt  Game.cpp  server.h  sv_ccmds.cpp  sv_ents.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_null.cpp  sv_send.cpp  sv_user.cpp
src/qstdlib/: CMakeLists.txt  info.cpp  string.cpp
src/render/: CMakeLists.txt
(+538 files in other folders)
